# TenderScraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  local-test.db  pyproject.toml  render.yaml  requirements-dev.txt
docker/: run-scraper.sh  start-cron.sh
src/tenderscraper/: cli.py  config.py  db.py  db_models.py  repository.py
src/tenderscraper/api/: app.py
src/tenderscraper/connectors/: base.py  registry.py
src/tenderscraper/connectors/sources/: poptavej.py  ted.py  tender_arena.py
src/tenderscraper/downloader/: poptavej.py  tender_arena.py
src/tenderscraper/ingestion/: orchestrator.py
src/tenderscraper/scraping/: archives.py  datetime_cz.py  files.py  label_value.py  overlays.py
src/tenderscraper/scraping/auth/: poptavej_auth.py
src/tenderscraper/scraping/sources/: poptavej.py  tender_arena.py
src/tenderscraper/storage/: layout.py  object_store.py
tests/: test_poptavej.py  test_tender_arena.py
